--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>pom</packaging>
+	<modules>
+		<module>metrics-producer</module>
+	</modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -13,14 +17,11 @@
 	<groupId>isthatkirill</groupId>
 	<artifactId>hw-two-kafka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
 	<name>hw-two-kafka</name>
 	<description>Hw №2</description>
 
 	<properties>
 		<java.version>17</java.version>
-		<mapstruct.version>1.5.3.Final</mapstruct.version>
-		<kafka.version>3.1.1</kafka.version>
 		<reactor-kafka.version>1.3.22</reactor-kafka.version>
 		<lombok.version>1.18.28</lombok.version>
 	</properties>
@@ -34,25 +35,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-			<version>${lombok.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct</artifactId>
-			<version>${mapstruct.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct-processor</artifactId>
-			<version>${mapstruct.version}</version>
 		</dependency>
 
 		<dependency>
