--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>metrics-producer</module>
+		<module>metrics-consumer</module>
 	</modules>
 
 	<parent>
@@ -24,17 +25,13 @@
 		<java.version>17</java.version>
 		<reactor-kafka.version>1.3.22</reactor-kafka.version>
 		<lombok.version>1.18.28</lombok.version>
+		<kafka.version>3.1.1</kafka.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 		<dependency>
@@ -53,6 +50,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+			<version>${lombok.version}</version>
 		</dependency>
 	</dependencies>
 
