--- a/metrics-producer/src/main/resources/application.yaml
+++ b/metrics-producer/src/main/resources/application.yaml
@@ -1,2 +1,9 @@
 server:
-  port: 8080
+  port: 8081
+
+spring:
+  config:
+    import: optional:file:.env[.properties]
+
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
