feat: dockerfile optimized, postgresql connected

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+HOST_WITH_PORT=postgres:5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=metrics
+
 KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 KAFKA_SUBSCRIBED_TOPICS=metrics-topic
 KAFKA_BROKER_ID=1
