--- a/metrics-consumer/Dockerfile
+++ b/metrics-consumer/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR /
 COPY / /
-RUN mvn -f pom.xml clean package --amd -pl metrics-consumer
+RUN mvn --projects metrics-consumer --also-make clean package
 
 FROM openjdk:17-jdk-slim
 COPY --from=build metrics-consumer/target/*.jar app.jar
