--- a/metrics-consumer/pom.xml
+++ b/metrics-consumer/pom.xml
@@ -17,9 +17,36 @@
     <properties>
         <gson.version>2.10.1</gson.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
+        <liquibase.version>4.24.0</liquibase.version>
+        <lombok.version>1.18.28</lombok.version>
+        <postgresql.version>42.6.0</postgresql.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+            <version>${lombok.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
