--- a/metrics-producer/Dockerfile
+++ b/metrics-producer/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR /
 COPY / /
-RUN mvn -f pom.xml clean package --amd -pl metrics-producer
+RUN mvn --projects metrics-producer --also-make clean package
 
 FROM openjdk:17-jdk-slim
 COPY --from=build metrics-producer/target/*.jar app.jar
